tests/core/targets_command/test_target_metadata_data/invalid_type/TARGETS.fixture
stub(name = "invalid_key", metadata = 123)
